apps/staging/deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notesapp
  namespace: default
spec:
  selector:
    matchLabels:
      app: notesapp
  template:
    spec:
      containers:
      - name: notesapp
