apps/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notesapp-ingress
  namespace: default
spec:
  tls:
  - hosts:
    - staging.notesapp.d9bcc6aece5445d2bb67.eastus.aksapp.io
  rules:
    - host: staging.notesapp.d9bcc6aece5445d2bb67.eastus.aksapp.io
